--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
   <!-- Team Section -->
   <section class="team">
     <h2>Our Team Members</h2>
-    <p><strong>Guide:</strong> Dr. B. Gopinathan,M.E(Ph.D)</p>
+    <p><strong>Guide:</strong> Dr. B. Gopinathan,M.E</p>
     <p><strong>Students:</strong></p>
     <ul>
       <li>G.K. Sandhya</li>
